--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,6 +1,6 @@
 <a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}">Home</a>
 <a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}about/index.html">{{ i18n "about" }}</a>
-<a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}frost/index.html">Frost</a>
+<!-- <a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}frost/index.html">Frost</a> -->
 <a href="{{ .Site.BaseURL }}{{ .Site.LanguagePrefix }}contact/index.html">{{ i18n "contact" }}</a>
 {{- if .Site.IsMultiLingual -}}
 {{- range $lang := .Site.Languages -}}
