Docker and restructure

--- a/layouts/_default/page.html
+++ b/layouts/_default/page.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class="post">
   <h1 class="post-title">
-    <a href="{{ .Permalink }}index.html">{{ .Title | markdownify }}</a></h1>
+    <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a></h1>
   <div class="post-meta">
       {{ if .Params.Date }}
     <span class="post-date">
