--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,12 +12,12 @@
   {{ range $paginator.Pages }}
   <div class="post on-list">
     <h1 class="post-title">
-      <a href="{{ .Permalink }}index.html">{{ .Title | markdownify }}</a></h1>
+      <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a></h1>
     
     {{ if .Params.tags }}
     <span class="post-tags">
       {{ range .Params.tags }}
-      #<a href="{{ (urlize (printf "tags/%s/" . )) | absLangURL }}index.html">
+      #<a href="{{ (urlize (printf "tags/%s/" . )) | absLangURL }}">
         {{- . -}}
       </a>
       {{ end }}
@@ -52,7 +52,7 @@
     {{ if not .Params.showFullContent }}
     <div>
       <a class="read-more button"
-        href="{{.RelPermalink}}index.html">{{ $.Site.Params.ReadMore }} →</a>
+        href="{{.RelPermalink}}">{{ $.Site.Params.ReadMore }} →</a>
     </div>
     {{ end }}
   </div>
